syntax = "proto3";

// The realtime protocol for the template match engine.
package api;

option go_package = "mc/protos";

enum OpCode {
  OPCODE_UNSPECIFIED = 0;
  OPCODE_START = 1;
  OPCODE_ADD_CARD = 2;
  OPCODE_ADD_BUILD = 3;
  OPCODE_CAST_CARD = 4;
  OPCODE_ATTACK = 5;
  OPCODE_END_TURN = 6;
}

// state
message Mana {
  int64 red = 1;
  int64 blue = 2;
  int64 green = 3;
  int64 white = 4;
  int64 black = 5;
}

message Zone {}
message Spell {}
message Item {}
message Unit {
  int64 healty = 1;
  repeated Mana cost = 2;
}

message Build {
  Mana add = 1;
  Mana sub = 2;
  Mana one = 3;
}

message Card{
  string id = 1;
  string name = 2;
  string desc = 3;
  oneof card_type{
    Unit unit = 4;
    Build build = 5;
  }
}

message Player {
  string id = 1;
  string name = 2;
  Mana mana = 3;
  repeated Card tabel = 5;
  repeated Card build = 6;
  repeated Card deads = 7;
  repeated Card hand = 8;
  repeated Card deck = 9;
}

message Enemy {
  string id = 1;
  string name = 2;
  Mana mana = 3;
  repeated Card tabel = 5;
  repeated Card build = 6;
  repeated Card deads = 7;
  int64 hand_len = 8;
}
// send_data

message Attack{
    string target_player = 1;
    string target_card = 2;
    //from
}

message Cast{
    string target_card = 1;
}
